# minimal_rust_kernel

./: .gn  BUILD.gn  Cargo.toml  README.md  linker.ld
.cargo/: config.toml
src/: entry.S  main.rs
